<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

	
    <string name="app_name">ChessDiags</string>
    <string name="settings">Settings</string>
    <string name="welcometitle">Welcome !</string>
    <string name="welcome">Welcome to ChessDiags !\n\n Since it\'s the first launch, the app has to download problems, it should only take about 10 seconds.</string>
    <string name="updating">Updating …</string>
    <string name="uploading">Uploading …</string>
    <string name="delete">Delete</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="loadingchessengine">Loading chess engine …</string>
    <string name="ok">OK</string>
    <string name="error">error</string>
    <string name="update">Update</string>
    <string name="invalidurl">invalid url</string>
    <string name="cancel">Cancel</string>
    <string name="addsource">Add a source</string>
    <string name="wantmore">Want more ?</string>
    <string name="browserepositories">Browse the repositories list</string>
    <string name="createyourownsource">Create your own source !</string>
    <string name="apidetails">API details</string>
    <string name="newsource">New source</string>
    <string name="add">add</string>
    <string name="movesleft">move(s) left</string>
    <string name="congratulations">Congratulations !</string>
    <string name="thanks">Thanks</string>
    <string name="fail">Fail :(</string>
    <string name="tryagain">Try again</string>
    <string name="positioninvalide">Invalid position</string>
    <string name="youmustsaveproblemfirst">You must save the problem first</string>
    <string name="norepositoryfound">No repository found</string>
    <string name="uploadto">Upload to :</string>
    <string name="problemsaved">Problem saved</string>
    <string name="savecreation">Save creation</string>
    <string name="save">save</string>
    <string name="uploadnotsupported">Upload not supported</string>
    <string name="invalidresponse">invalid response</string>
    <string name="problemalreadysubmitted">problem already submitted</string>
    <string name="problemrefused">problem refused</string>
    <string name="matein">Mate in %d moves</string>
    <string name="sourcesuccesfullyadded">Source %s succesfully added</string>
    <string name="failedtoaddsource">Failed to add source : %s</string>
    <string name="invalidurloralreadyadded">This url is invalid or already present</string>
    <string name="name"> Name : </string>
    <string name="unamedproblem">Unamed problem</string>
    <string name="whitetoplay">White to play</string>
    <string name="movestomate"> Moves to mate :</string>
    <string name="description"> Description :</string>
    <string name="mynewproblem">My new problem !</string>
    <string name="active">Active</string>
    <string name="url">  URL : </string>
    <string name="http">http://</string>
    <string name="sources">Sources</string>
    <string name="managesources">Manage sources</string>
    <string name="aboutcategory">About</string>
    <string name="donate">Donate</string>
    <string name="thankthedev">Thank the dev</string>
    <string name="abouttitle">About Chessdiags</string>
    <string name="inappnotsupported">In-app not supported on this device</string>
    <string name="thanksforsupport">Thanks for your support !</string>
    <string name="loading">Loading ...</string>
    <string name="yourcreations">Your creations</string>
    <string name="beginnerrepo">Beginner repository</string>
    <string name="wtharvey">Wtharvey puzzles repository</string>
    <string name="publicrepo">Chessdiags.com public repository</string>
    <string name="nextproblem">Next problem</string>
    <string name="nextproblemnotfound">No more problems on this repository</string>
    <string name="invalidfen">Error : invalid position</string>
    <string name="emptycreationsmessage">Here is the list of the problems you have created.\nTo switch between problem repositories, swipe with your finger.</string>
    <string name="sending">Sending ...</string>
    
    <string name="noactivitytohandleintent">No application found :(</string>
    <string name="sharethisproblem">Share this problem</string>
    <string name="white">White</string>
    <string name="black">Black</string>
    <string name="sharemessage">%1$s to mate in %2$d move(s) %3$s</string>
    <string name="sharetitle">My chess problem</string>
    
    <string name="newproblem">New problem</string>
    <string name="share">Share</string>
    <string name="edit">Edit</string>
    <string name="redraw">Redraw</string>

    <string-array name="shareoptions">
        <item>Submit to repositories</item>
        <item>Intent sharing</item>
    </string-array>
    
    <!--  Smartwatch extension strings -->
        <!-- Application name. "Smart Extras" is trademarked. It should not be translated. Smart Extras is written as two words, capital S, capital E. Use ™ in every instance. 8 Game is a number/image game of moving tiles. The name should be translated.
 -->
    <!-- Name of extension (number/image game of moving tiles), shown on SmartWatch. The name should be translated. -->
    <string name="extension_name" xliff:restype="x-ANDROID/LIST/SETTINGS/LARGE/CHECKBOX">Chessdiags</string>
    <!-- Title of preference activity, shown in preferences on phone -->
    <string name="preference_activity_title" xliff:restype="x-GENERIC/HEADERTITLE/SMALL/V">8 Game settings</string>
    <!-- Title in popup dialog when sharing result via another Android application, i.e., Facebook -->
    <string name="share_result_title" xliff:restype="x-GENERIC/POPUP/TITLE/V">Select application</string>
    <!-- Title for sharing result, not shown in 8 Game application -->
    <string name="share_title" xliff:restype="x-AEF-NOBOX">8 Game result</string>
    <!-- Text for sharing result, not shown in 8 Game application. %d will be replaced with a number (e.g. I finished the SmartWatch 8 Game in 5 moves, can you beat it?) -->
    <string name="share_text" xliff:restype="x-AEF-NOBOX">I finished the SmartWatch 8 Game in %d moves, can you beat it?</string>
    <!-- Text shown in progress dialog while loading game image -->
    <string name="loading_image" xliff:restype="x-AEF-TEXT/CONTROL/1ROW/NORMAL">Loading image</string>
    <!-- Text displayed on the SmartWatch when a game of 8 Game is finished, together with the number of moves in that game. -->
    <string name="game_finished_moves_text" xliff:restype="x-AEF-TEXT/CONTROL/1ROW/BOLD">Moves</string>

     <!--  end of Smartwatch extension strings -->
</resources>