<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory
        android:key="sources"
        android:title="@string/sources" >
    </PreferenceCategory>

    <PreferenceCategory
        android:key="manageSources"
        android:title="@string/managesources" >
    </PreferenceCategory>

    <PreferenceCategory
        android:key="aboutCategory"
        android:title="@string/aboutcategory" >

        <Preference
            android:title="@string/donate"
            android:summary="@string/thankthedev"
            android:key="donate" >
        </Preference>

        <Preference
            android:key="about"
            android:title="@string/abouttitle" >
        </Preference>
    </PreferenceCategory>

</PreferenceScreen>